--- a/drake/examples/kuka_iiwa_arm/dev/pick_and_place/BUILD.bazel
+++ b/drake/examples/kuka_iiwa_arm/dev/pick_and_place/BUILD.bazel
@@ -13,6 +13,7 @@ drake_cc_binary(
     ],
     deps = [
         "//drake/common:find_resource",
+	"//drake/common:text_logging_gflags",
         "//drake/examples/kuka_iiwa_arm:iiwa_common",
         "//drake/examples/kuka_iiwa_arm:iiwa_lcm",
         "//drake/examples/kuka_iiwa_arm/pick_and_place",
