--- a/bindings/pydrake/examples/BUILD.bazel
+++ b/bindings/pydrake/examples/BUILD.bazel
@@ -62,6 +62,7 @@ drake_pybind_library(
     cc_deps = [
         "//bindings/pydrake:documentation_pybind",
         "//bindings/pydrake/common:deprecation_pybind",
+        "//bindings/pydrake/common:drake_optional_pybind",
     ],
     cc_srcs = ["manipulation_station_py.cc"],
     package_info = PACKAGE_INFO,
@@ -135,8 +136,8 @@ drake_py_library(
 
 install(
     name = "install",
-    targets = PY_LIBRARIES,
     py_dest = PACKAGE_INFO.py_dest,
+    targets = PY_LIBRARIES,
     deps = get_drake_py_installs(PY_LIBRARIES_WITH_INSTALL),
 )
 
