--- a/perception/BUILD.bazel
+++ b/perception/BUILD.bazel
@@ -53,6 +53,20 @@ drake_cc_library(
     ],
 )
 
+load(
+    "@drake//tools/skylark:drake_py.bzl",
+    "drake_py_binary",
+    "drake_py_library",
+)
+
+drake_py_binary(
+    name = "dope_system",
+    srcs = ["dope_system.py"],
+    deps = [
+        "//bindings/pydrake",
+    ],
+)
+
 drake_cc_googletest(
     name = "depth_image_to_point_cloud_test",
     srcs = ["test/depth_image_to_point_cloud_test.cc"],
